# wiki-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  build.rs  config.toml.example  docker-compose.yml
.cargo/: config.toml
.github/workflows/: build.yml  publish.yml
bindings/: generate.sh  package-lock.json  package.json
bindings/src/: AccessKeyBrief.ts  AccessKeyInfo.ts  AddIssueRequestBody.ts  AdminProjectInfo.ts  BrowseProject.ts  BrowseResponse.ts  ChangelogEntry.ts  ContentFileTreeEntry.ts  ContentItemNameResponse.ts  ContentItemResponse.ts  CreateAccessKeyResponse.ts  DataImportInfo.ts  DataMigration.ts  DeploymentEvent.ts  DeploymentInfo.ts  DeploymentStatus.ts  DevProjectData.ts  FileTreeEntry.ts  FileType.ts  Frontmatter.ts  FullItemData.ts  FullRecipeData.ts  FullTagData.ts  GameContentType.ts  GameRecipeType.ts  GitRevision.ts  Infobox.ts  InfoboxTab.ts  ItemContentPage.ts  ItemData.ts  ItemSlot.ts  License.ts  Licenses.ts  LocaleInfo.ts  PageResponse.ts  PaginatedData.ts  ProjectCreatedResponse.ts  ProjectData.ts  ProjectDetails.ts  ProjectError.ts  (+39 more)
builtin/data/: workbenches.json
crates/wiki-api/: Cargo.toml
crates/wiki-api/src/: error.rs  extractors.rs  greeter.rs  lib.rs  middleware.rs  state.rs
crates/wiki-api/src/auth/: backend.rs  convert.rs  github.rs  mod.rs  modrinth.rs  routes.rs
crates/wiki-api/src/v1/: browse.rs  docs.rs  game.rs  mod.rs  moderation.rs  system.rs
crates/wiki-api/src/v1/authors/: content.rs  lifecycle.rs  manage.rs  mod.rs  projects.rs  public.rs  realtime.rs
crates/wiki-db/: Cargo.toml
crates/wiki-db/src/: convert.rs  error.rs  lib.rs
crates/wiki-db/src/entity/: access_key.rs  data_import.rs  deployment.rs  item.rs  mod.rs  prelude.rs  project.rs  project_issue.rs  project_item.rs  project_item_page.rs  project_item_page_best.rs  project_page.rs  project_tag.rs  project_version.rs  recipe.rs  recipe_ingredient_item.rs  recipe_ingredient_tag.rs  recipe_type.rs  recipe_workbench.rs  report.rs  tag.rs  tag_item.rs  tag_item_flat.rs  tag_tag.rs  user.rs  user_project.rs
crates/wiki-db/src/query/: access_key.rs  data_import.rs  deployment.rs  flags.rs  ingestor.rs  mod.rs  project.rs  project_issue.rs  project_version.rs  recipe.rs  report.rs  user.rs  user_project.rs
crates/wiki-db/src/repo/: mod.rs  project.rs
crates/wiki-domain/: Cargo.toml
crates/wiki-domain/src/: access.rs  cache.rs  content.rs  error.rs  ids.rs  lib.rs  metadata.rs  pagination.rs  project.rs  request.rs  response.rs  util.rs  visibility.rs
crates/wiki-domain/src/pages/: links.rs  metadata.rs  mod.rs
crates/wiki-external/: Cargo.toml
crates/wiki-external/src/: crowdin.rs  curseforge.rs  discord.rs  error.rs  frontend.rs  github.rs  lib.rs  modrinth.rs  platforms.rs  typesense.rs
crates/wiki-migration/: Cargo.toml
crates/wiki-migration/src/: lib.rs  m20241115_210200_create_project.rs  m20250126_210200_users.rs  m20250131_211200_game_content.rs  m20250525_211200_system_info.rs  m20250609_211200_deployments.rs  m20250612_211200_project_issue.rs  m20250621_211200_reports.rs  m20250723_211200_keys.rs  m20251129_211200_virtual_projects.rs  m20260507_143811_item_page.rs  m20260527_143811_project_page.rs  m20260601_193151_project_item_page_best.rs  main.rs
crates/wiki-migration/src/builtins/: m20250625_211200_game_builtins.rs  mod.rs
crates/wiki-projects/: Cargo.toml
crates/wiki-projects/src/: access.rs  builtin.rs  cached.rs  flags.rs  lib.rs  links.rs  local.rs  management.rs  pages.rs  recipe_resolver.rs  recipe_types.rs  reports.rs  resolver.rs
crates/wiki-projects/src/builtin/: mod.rs  project.rs  recipe_types.rs
crates/wiki-storage/: Cargo.toml
crates/wiki-storage/src/: cache.rs  deployment.rs  error.rs  format.rs  git.rs  lib.rs  realtime.rs  store.rs  task_manager.rs
crates/wiki-storage/src/deployment/: filesystem.rs  manager.rs  mod.rs  validation.rs
crates/wiki-storage/src/format/: builtin.rs  legacy.rs  mod.rs  reader.rs  shared.rs  v1_format.rs
crates/wiki-storage/src/ingestor/: content_paths.rs  frontmatter.rs  issues.rs  markdown.rs  metadata.rs  mod.rs  tags.rs
crates/wiki-storage/src/ingestor/recipes/: builtin.rs  custom.rs  mod.rs  parser.rs  types.rs
crates/wiki-storage/src/search/: mod.rs
crates/wiki-system/: Cargo.toml
crates/wiki-system/src/: cache.rs  cacheable.rs  error.rs  game_data.rs  lang.rs  lib.rs
src/: config.rs  logging.rs  main.rs
