[package]
name = "wiki-service"
description = "Master Wiki service binary."

edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
wiki-api.workspace = true
wiki-storage.workspace = true

tokio.workspace = true
axum.workspace = true
axum-login.workspace = true
tower-sessions.workspace = true
tower-sessions-redis-store.workspace = true
fred.workspace = true
sea-orm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
figment.workspace = true
garde.workspace = true
serde.workspace = true
anyhow.workspace = true

[workspace]
members = [
    "crates/wiki-api",
    "crates/wiki-db",
    "crates/wiki-domain",
    "crates/wiki-migration",
    "crates/wiki-projects",
    "crates/wiki-storage",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Sinytra"]
repository = "https://github.com/Sinytra/WikiService"

[workspace.dependencies]
wiki-api = { path = "crates/wiki-api", version = "0.1.0" }
wiki-db = { path = "crates/wiki-db", version = "0.1.0" }
wiki-domain = { path = "crates/wiki-domain", version = "0.1.0" }
wiki-migration = { path = "crates/wiki-migration", version = "0.1.0" }
wiki-projects = { path = "crates/wiki-projects", version = "0.1.0" }
wiki-storage = { path = "crates/wiki-storage", version = "0.1.0" }

# HTTP
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-login = "0.18"
axum-extra = { version = "0.12", features = ["typed-header", "cookie", "query"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs", "limit"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
oauth2 = { version = "5.0", features = ["reqwest"] }
tower-sessions = { version = "0.14", default-features = false, features = ["axum-core"] }
tower-sessions-redis-store = { version = "0.16", default-features = false }

# Async
tokio = { version = "1.52", features = ["full"] }
tokio-util = "0.7"

# SQL
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid"] }
sea-orm-migration = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }

# Redis
fred = { version = "10", features = ["enable-rustls"] }
# Git
git2 = "0.20"

# Logging
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt", "std"] }
tracing-appender = "0.2.5"

# Config
figment = { version = "0.10", features = ["toml", "env"] }
garde = { version = "0.22", features = ["derive", "url"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.28", features = ["derive"] }

# Utilities
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
