[package]
name = "wiki-api"

edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
wiki-db.workspace = true
wiki-domain.workspace = true
wiki-external.workspace = true
wiki-projects.workspace = true
wiki-storage.workspace = true
wiki-system.workspace = true

axum.workspace = true
axum-login.workspace = true
oauth2.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
tower-sessions.workspace = true
chrono.workspace = true
uuid.workspace = true
strum.workspace = true
tokio.workspace = true
futures.workspace = true
sentry.workspace = true
garde.workspace = true
