[package]
name = "wiki-db"

edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
wiki-domain.workspace = true

sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
bitflags.workspace = true
