[package]
name = "wiki-domain"

edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[features]
ts = ["dep:ts-rs"]

[dependencies]
fred.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sea-orm.workspace = true
strum.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
garde.workspace = true

ts-rs = { version = "12.0", optional = true, features = ["chrono-impl", "serde-json-impl"] }
