[package]
name = "wiki-external"

edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
wiki-domain.workspace = true

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
strum.workspace = true
