[package]
name = "wiki-projects"

edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
wiki-domain.workspace = true
wiki-db.workspace = true
wiki-storage.workspace = true

async-trait.workspace = true
sea-orm.workspace = true
tracing.workspace = true
thiserror.workspace = true
