[package]
name = "wiki-projects"

edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
wiki-domain.workspace = true
wiki-db.workspace = true
wiki-storage.workspace = true
wiki-external.workspace = true
wiki-system.workspace = true

async-trait.workspace = true
sea-orm.workspace = true
strum.workspace = true
tracing.workspace = true
futures.workspace = true
convert_case.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
url = "2"
uuid.workspace = true
quick_cache.workspace = true