[package]
name = "wiki-storage"

edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
wiki-domain.workspace = true
wiki-db.workspace = true
wiki-external.workspace = true

git2.workspace = true
typesense.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
serde_path_to_error.workspace = true
markdown.workspace = true
chrono.workspace = true
strum.workspace = true
thiserror.workspace = true
garde.workspace = true
futures.workspace = true
sea-orm.workspace = true
uuid.workspace = true
async-trait.workspace = true
infer.workspace = true
walkdir.workspace = true
